# tokimon

./: .gitignore  AGENTS.md  README.md  pyproject.toml
archive/: README.md
src/: README.md  cli.py  flow_types.py  pyproject.toml
src/agents/: manager.py  prompts.py  worker.py
src/benchmarks/: harness.py
src/chat_ui/: __init__.py  server.py
src/doctor/: runner.py
src/gateway/: health_client.py  server.py
src/llm/: client.py
src/memory/: store.py
src/policy/: __init__.py  dangerous_tools.py  tool_approval.py
src/runners/: baseline.py  hierarchical.py
src/self_improve/: __init__.py  orchestrator.py  source.py  workspace.py
src/skills/: builder.py  registry.py
src/skills_builtin/: __init__.py
src/tests/: conftest.py  test_chat_ui.py  test_chat_ui_self_improve_dashboard.py  test_claude_cli_client.py  test_cli_auto.py  test_codex_cli_settings_env.py  test_codex_prompt_rendering.py  test_codex_ripgrep_guard.py  test_doctor.py  test_gateway_cli.py  test_gateway_ws.py  test_llm_json_extraction.py  test_logs_cli.py  test_memory_cli.py  test_memory_retrieval.py  test_replay_phase1.py  test_self_improve_constitution.py  test_self_improve_entrypoint_loop.py  test_self_improve_orchestrator.py  test_self_improve_worktree.py  test_skill_builder.py  test_status_cli.py  test_tool_grep_tool.py  test_tool_web_tool.py  test_trace_unrolling.py  test_workflow_termination.py
src/tokimon/: __init__.py  __main__.py  cli.py  engine.py  models.py  persistence.py  policy.py
src/tools/: grep_tool.py  pytest_tool.py  web_tool.py
src/workflow/: models.py  schema.py
(+170 files in other folders)
