[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokimon"
version = "0.2.0"
description = "Tokimon v2: a token monster that improves itself by eating tokens."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tokimon = "tokimon.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
