[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokimon"
version = "0.1.0"
description = "Hierarchical manager/worker agent system with workflow orchestration and benchmarks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
tokimon = "cli:main"
agent-flow = "cli:main"
super-agent = "cli:main"

[tool.setuptools]
package-dir = {"" = "."}
py-modules = ["artifacts", "cli", "flow_types", "logging_utils", "runs", "tracing"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "--maxfail=1"
testpaths = ["tests"]
